--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,9 @@
   --foreground: #171717;
   }
 } */
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   color: var(--foreground);
   background: var(--background);
@@ -21,8 +23,6 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  scroll-behavior: smooth;
-
   margin: 0;
   padding: 0;
   box-sizing: border-box;
